Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33813

ERROR 1021 (HY000): Disk full (./org/test1.MAI); waiting for someone to free some space... (errno: 28 "No space left on device")

    XMLWordPrintable

Details

    Description

      We have a test senerio with Aria tables MariaDB ES versions 10.6.14,10.6.15 and 10.6.17(Current).
      We tried executing slect,Inserts/deletes and alter commands parallel. When the table alter failed with MariaDB "tmp" dir space 100% utilization, Transaction rolebacked and "tmp" utilization was down to normal.
      But Subsequent queries which are using "tmp" dir were failing with "ERROR 1021 (HY000): Disk full (./org/test.MAI); waiting for someone to free some space... (errno: 28 "No space left on device")".

      In each case we observed "(deleted)" files showing up in the output of the "lsof" command as referenced below.

      -----------------------------------------------------------------------------------------
      Version:10.6.14
       
      MariaDB [org]> select version();
      +----------------------------------+
      | version()                        |
      +----------------------------------+
      | 10.6.14-9-MariaDB-enterprise-log |
      +----------------------------------+
      1 row in set (0.001 sec)
       
      MariaDB [org]> show processlist;
      +----+-------+-----------+------+---------+------+----------+------------------+----------+
      | Id | User  | Host      | db   | Command | Time | State    | Info             | Progress |
      +----+-------+-----------+------+---------+------+----------+------------------+----------+
      | 77 | mysql | localhost | org  | Query   |    0 | starting | show processlist |    0.000 |
      +----+-------+-----------+------+---------+------+----------+------------------+----------+
      1 row in set (0.001 sec)
       
      MariaDB [org]> select count(*) from  test1 where a=1;
      ERROR 1021 (HY000): Disk full (./org/test1.MAI); waiting for someone to free some space... (errno: 28 "No space left on device")
       
      MariaDB [org]> select count(*) from test1;
      +----------+
      | count(*) |
      +----------+
      |  2338896 |
      +----------+
      1 row in set (0.000 sec)
       
      MariaDB [org]>
      MariaDB [org]> \! df -h
      Filesystem      Size  Used Avail Use% Mounted on
      tmpfs           391M  1.6M  390M   1% /run
      /dev/sda3        49G   18G   29G  40% /
      tmpfs           2.0G     0  2.0G   0% /dev/shm
      tmpfs           5.0M  4.0K  5.0M   1% /run/lock
      tmpfs           2.0M     0  2.0M   0% /mariadb/temp
      /dev/sda2       512M  6.1M  506M   2% /boot/efi
      tmpfs           391M  116K  391M   1% /run/user/1000
      tmpfs           2.0M     0  2.0M   0% /mariadb/10614/temp
       
      MariaDB [(none)]> \! lsof +L1 |grep -i "/mariadb/10614"
      lsof: WARNING: can't stat() fuse.gvfsd-fuse file system /run/user/1000/gvfs
            Output information may be incomplete.
      lsof: WARNING: can't stat() fuse.portal file system /run/user/1000/doc
            Output information may be incomplete.
      mariadbd  3418   mysql    8u   REG   0,48        0     0      36 /mariadb/10614/temp/#36 (deleted)
      mariadbd  3418   mysql    9u   REG   0,48        0     0      37 /mariadb/10614/temp/#37 (deleted)
      mariadbd  3418   mysql   11u   REG   0,48        0     0      38 /mariadb/10614/temp/#38 (deleted)
      mariadbd  3418   mysql   14u   REG   0,48        0     0      39 /mariadb/10614/temp/#39 (deleted)
      MariaDB [(none)]>
       
      --------------------------------------------------------------------------
       
      Version : 10.6.15
      MariaDB [org]> select version();
      +-----------------------------------+
      | version()                         |
      +-----------------------------------+
      | 10.6.15-10-MariaDB-enterprise-log |
      +-----------------------------------+
      1 row in set (0.000 sec)
       
      MariaDB [org]> show processlist;
      +----+------+-----------+------+---------+------+----------+------------------+----------+
      | Id | User | Host      | db   | Command | Time | State    | Info             | Progress |
      +----+------+-----------+------+---------+------+----------+------------------+----------+
      | 20 | root | localhost | org  | Query   |    0 | starting | show processlist |    0.000 |
      +----+------+-----------+------+---------+------+----------+------------------+----------+
      1 row in set (0.000 sec)
       
      MariaDB [org]> select count(*) from test1 where a=1;
      ERROR 1021 (HY000): Disk full (./org/test1.MAI); waiting for someone to free some space... (errno: 28 "No space left on device")
       
      MariaDB [org]> select count(*) from test1;
      +----------+
      | count(*) |
      +----------+
      | 14745600 |
      +----------+
      1 row in set (0.001 sec)
      MariaDB [org]>
      MariaDB [org]> \! df -h
      Filesystem      Size  Used Avail Use% Mounted on
      tmpfs           391M  2.0M  389M   1% /run
      /dev/sda3        49G   17G   30G  35% /
      tmpfs           2.0G     0  2.0G   0% /dev/shm
      tmpfs           5.0M  4.0K  5.0M   1% /run/lock
      /dev/sda2       512M  6.1M  506M   2% /boot/efi
      tmpfs           391M  104K  391M   1% /run/user/1000
      tmpfs           2.0M     0  2.0M   0% /mariadb/temp
      tmpfs           391M   92K  391M   1% /run/user/128
      MariaDB [org]> \! lsof +L1 |grep -i "/mariadb/"
      lsof: WARNING: can't stat() fuse.gvfsd-fuse file system /run/user/1000/gvfs
            Output information may be incomplete.
      lsof: WARNING: can't stat() fuse.portal file system /run/user/1000/doc
            Output information may be incomplete.
      lsof: WARNING: can't stat() fuse.portal file system /run/user/128/doc
            Output information may be incomplete.
      lsof: WARNING: can't stat() fuse.gvfsd-fuse file system /run/user/128/gvfs
            Output information may be incomplete.
      mariadbd  3674   mysql    8u   REG   0,47        0     0      40 /mariadb/temp/#40 (deleted)
      mariadbd  3674   mysql    9u   REG   0,47        0     0      41 /mariadb/temp/#41 (deleted)
      mariadbd  3674   mysql   11u   REG   0,47        0     0      42 /mariadb/temp/#42 (deleted)
      mariadbd  3674   mysql   14u   REG   0,47        0     0      43 /mariadb/temp/#43 (deleted)
       
      ----------------------------------------------------------------------
      Version : 10.6.17
      MariaDB [org]> select version();
      +---------------------+
      | version()           |
      +---------------------+
      | 10.6.17-MariaDB-log |
      +---------------------+
      1 row in set (0.001 sec)
       
      MariaDB [org]> show processlist;
      +----+------+-----------+------+---------+------+----------+------------------+----------+
      | Id | User | Host      | db   | Command | Time | State    | Info             | Progress |
      +----+------+-----------+------+---------+------+----------+------------------+----------+
      | 24 | root | localhost | org  | Query   |    0 | starting | show processlist |    0.000 |
      +----+------+-----------+------+---------+------+----------+------------------+----------+
      1 row in set (0.003 sec)
       
      MariaDB [org]> select count(*) from test where a=1;
      ERROR 1021 (HY000): Disk full (./org/test.MAI); waiting for someone to free some space... (errno: 28 "No space left on device")
       
      MariaDB [org]> select count(*) from test;
      +----------+
      | count(*) |
      +----------+
      |        9 |
      +----------+
      1 row in set (0.002 sec)
       
      @node1:/mariadb# df -h
      Filesystem      Size  Used Avail Use% Mounted on
      tmpfs           391M  1.6M  390M   1% /run
      /dev/sda3        49G   16G   31G  34% /
      tmpfs           2.0G     0  2.0G   0% /dev/shm
      tmpfs           5.0M  4.0K  5.0M   1% /run/lock
      /dev/sda2       512M  6.1M  506M   2% /boot/efi
      tmpfs           391M  120K  391M   1% /run/user/1000
      tmpfs           2.0M  4.0K  2.0M   1% /mariadb/temp
      
      

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              vigneswara.bandi Venkata Vigneswara Reddy Bandi
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 2d
                  2d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.75d Time Not Required
                  0.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.